risky_sophie/main.css
/* reset */
*, *::after, *::before {
    margin: 0;
    padding: 0;
    box-sizing: inherit;
}

:root {
    font-size: 62.5%; /* 1 rem = 10px */
    --background-color1: #cadfff;
    --background-color2: whitesmoke;
    --mitigation-color: #DEB789;
    --contingency-color: #AFC09D;
    --impact-color: #DEB789;
    --default-font: 'Roboto';
    --header-padding: 2rem;
}

body {
    box-sizing: border-box; /* border and padding is not added to total width or height of element */
    overflow-x: hidden; /* hide horizontal scrollbar otherwise transitions will temporarily create scrollbars */
    background-color: var(--background-color2);
    font-family: var(--default-font), sans-serif;
}

.risk-detail-textarea {
    width: 100%;
    font-family: 'Roboto';
    border: none;
    border-radius: 0 0 0 2ch;
    padding: 1ch;
}

.risk-detail-textarea-true {
    overflow: hidden;
    position: absolute;
    height: 100%;
}

.risk-detail-textarea-mirror {
    visibility: hidden;
}

.content {
    position: relative;
    padding-top: calc(2 * var(--header-padding) + 4ch) ;
}

header {
    font-size: large;
    background-color: var(--background-color1);
    text-align: center;
    padding: var(--header-padding);
    display: flex;
    justify-content: space-between;
    position: fixed;
    width: 100%;
    z-index: 100;
}

.settings {
    font-weight: bold;
}

.risk-detail {
    font-size: medium;
    width: 100%;
}

.risk-detail-label {
    position: relative;
}

.risk-detail-label > .risk-detail-textarea {
    font-size: large;
}

.risk-detail-heading {
    display: flex;
    align-items: flex-start;
    padding: 1rem;
}

.risk-detail-iconbar {
    display: flex;
    align-items: flex-start;
    background-color: var(--background-color1);
    border-top-style: solid;
    border-top-width: thin;
    border-bottom-style: solid;
    border-bottom-width: thin;
    padding: 1rem;
}

.risk-detail-iconbar-item {
    display: flex;
    align-items: center;
    font-size: small;
    padding-left: 1ch;
}

.risk-detail-sectionlist {
    border-bottom-style: solid;
    border-bottom-width: thin;
}

.risk-detail-sectionlist-content {
    display: flex;
    flex-wrap: wrap;
}

.risk-detail-sectionlist-item {
    border-radius: 0.5ch;
    margin: .5vh 1ch;
    padding: .5vh 1ch;
    font-size: small;
}

.risk-detail-sectionlist-mitigation {
    background-color: var(--mitigation-color);
}

.risk-detail-sectionlist-contingency {
    background-color: var(--contingency-color);
}

.risk-detail-sectionlist-impact {
    background-color: var(--impact-color);
}

.risk-detail-sections {
    background-color: var(--background-color1);
    border-bottom-style: solid;
    border-bottom-width: thin;
    padding: 2ch 0ch;
}

.risk-detail-sections-contents {
    background-color: var(--background-color2);
    border-top-style: solid;
    border-top-width: thin;
    border-bottom-style: solid;
    border-bottom-width: thin;
}

.risk-detail-section-button-wrap {
    display: flex;
    align-items: center;
    flex-direction: row;
    justify-content: space-between;
    background-color: lightgray;
}

.risk-detail-section-notification {
    font-size: medium;
}

.risk-detail-section-button-bar {
    display: flex;
    float: right;
}

.risk-detail-section-button {
    display: flex;
    align-items: center;
    justify-content: space-around;
    width: 10ch;
}

.risk-detail-section-button-confirm {

}

.risk-detail-section-button-undo {

}

.hide {
    display: none !important;
}

.hidden {
    visibility: hidden;
}

.fix-width {
    min-width: 1rem;
}

.positioned {
    position: absolute;
    left: 0;
    top: 0;
}

.dashboard {
    font-size: large;
    margin: 0;
    padding: .3rem;
    width: 100%;
}

.dashboard-element {
    display: flex;
    align-items: flex-start;
    border-bottom: solid;
    border-bottom-width: thin;
    padding-bottom: .3rem;
    padding-top: .3rem;
}

.dashboard-label {
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    display: -webkit-box;
    min-height: 4ch;
    overflow: hidden;
    text-overflow: ellipsis;
}

.risk-detail-section-title {
    display: flex;
    border-bottom: 2px black solid;
    justify-content: space-between;
}

.risk-detail-section-title > .risk-detail-section-label {
    border-top-right-radius: 1ch;
    border-top-left-radius: 1ch;
    padding: 0ch 1ch;
}

.mitigation {
    margin: 1ch;
}

.mitigation > .risk-detail-section-title {
    border-bottom-color: var(--mitigation-color);
}

.mitigation > .risk-detail-section-title > .risk-detail-section-label {
    background-color: var(--mitigation-color);
}

.contingency {
    margin: 1ch;
}

.contingency > .risk-detail-section-title {
    border-bottom-color: var(--contingency-color);
}

.contingency > .risk-detail-section-title > .risk-detail-section-label {
    background-color: var(--contingency-color);
}

.impact {
    margin: 1ch;
}

.impact > .risk-detail-section-title {
    border-bottom-color: var(--impact-color);
}

.impact > .risk-detail-section-title > .risk-detail-section-label {
    background-color: var(--impact-color);
}

.badge {
    border-radius: 1rem;
    color: white;
    font-size: small;
    margin: 1px 2ch 1px 1px;
    min-width: 9ch;
    padding: 4px 8px;
}

.badge-high {
    background:#DC3545;
}

.badge-medium {
    background: #EFA73C;
}

.badge-low {
    background: #29C338;
}

.badge-high::before {
    content: "High";
}

.badge-medium::before {
    content: "Medium";
}

.badge-low::before {
    content: "Low";
}

.new-risk-bar-1 {
    display: flex;
    align-items: center;
    width: 100%;
}

.new-risk-bar-2 {
    display: flex;
}

.new-risk-textarea {
    font: inherit;
    width: 100%;
}

.new-risk-bar-container-1 {
    margin-top: 3px;
}

.new-risk-bar-container-2 {

}

.new-risk-add-text {
    font-size: large;
    padding-right: 1;
    margin-bottom: 6px;
    margin-top: 6px;
}

